--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Ph.D Candidate"
+title                    : "Zhewei Yao"
 title_separator          : "-"
 name                     : &name "Zhewei Yao"
 description              : &description "personal description"
