--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ author:
   location         : "Berkeley, CA"
   employer         :
   googlescholar    : "https://scholar.google.com/citations?user=gpSeMjYAAAAJ&hl=en"
-  email            :
+  email            : "zheweiy@berkeley.edu"
   uri              :
   bitbucket        :
   codepen          :
@@ -97,7 +97,7 @@ author:
   keybase          :
   instagram        :
   lastfm           :
-  linkedin         :
+  linkedin         : "https://www.linkedin.com/in/zhewei-yao-943305139/"
   orcid            : #"http://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
