--- a/_config.yml
+++ b/_config.yml
@@ -92,12 +92,12 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "https://github.com/yaozhewei"
+  github           : "yaozhewei"
   google_plus      :
   keybase          :
   instagram        :
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/zhewei-yao-943305139/"
+  linkedin         : "zhewei-yao-943305139/"
   orcid            : #"http://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
