first version online

--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 author:
   name             : "Zhewei Yao"
   avatar           : "profile.png"
-  bio              : "Ph.D student at RISELab of EECS and Math Department of University of California at Berkeley"
+  bio              : "Ph.D student in the RISELab of EECS and Math Department of University of California at Berkeley"
   location         : "Berkeley, CA"
   employer         :
   googlescholar    : "https://scholar.google.com/citations?user=gpSeMjYAAAAJ&hl=en"
