--- a/_config.yml
+++ b/_config.yml
@@ -80,11 +80,11 @@ analytics:
 author:
   name             : "Zhewei Yao"
   avatar           : "profile.png"
-  bio              : "Ph.D student in the RISELab of EECS and Math Department of University of California at Berkeley"
-  location         : "Berkeley, CA"
+  bio              : "Principal researcher and R&D manager at Microsoft"
+  location         : "Redmond, WA"
   employer         :
   googlescholar    : "https://scholar.google.com/citations?user=gpSeMjYAAAAJ&hl=en"
-  email            : "zheweiy@berkeley.edu"
+  email            : "zheweiyao@gmail.com"
   uri              :
   bitbucket        :
   codepen          :
