--- a/_config.yml
+++ b/_config.yml
@@ -80,8 +80,8 @@ analytics:
 author:
   name             : "Zhewei Yao"
   avatar           : "profile.png"
-  bio              : "Principal researcher and R&D manager at Microsoft"
-  location         : "Redmond, WA"
+  bio              : "Senior Scientist II at Snowflake"
+  location         : "Bellevue, WA"
   employer         :
   googlescholar    : "https://scholar.google.com/citations?user=gpSeMjYAAAAJ&hl=en"
   email            : "zheweiyao@gmail.com"
